# CalibrateKinect

./: .gitignore  CMakeLists.txt  LICENSE  README.md
calculate_homography/src/: CMakeLists.txt  app.cpp  main.cpp
calculate_homography/src/include/: app.h  util.h
camera_parameters/src/: CMakeLists.txt  app.cpp  main.cpp
src/: CMakeLists.txt
src/include/: app.h
